--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/netflix_favicon.ico" />
+    <link rel="icon" href="/MOVIENET.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Netflix Clone</title>
+    <title>MovieNet Platform</title>
   </head>
   <body>
     <div id="root"></div>
