--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,12 @@
     <link rel="icon" href="/MOVIENET.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MovieNet Platform</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    
   </body>
 </html>
