--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/MOVIENET.png" />
+    <link rel="icon" href="/logo-movienet.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MovieNet Platform</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
